--- a/.gitignore
+++ b/.gitignore
@@ -144,13 +144,14 @@ DocProject/Help/html
 
 # Click-Once directory
 publish/
+.publish/
 
 # Publish Web Output
 *.[Pp]ublish.xml
 *.azurePubxml
 # TODO: Comment the next line if you want to checkin your web deploy settings
 # but database connection strings (with potential passwords) will be unencrypted
-*.pubxml
+#*.pubxml
 *.publishproj
 
 # Microsoft Azure Web App publish settings. Comment the next line if you want to
@@ -200,6 +201,7 @@ ClientBin/
 *.pfx
 *.publishsettings
 orleans.codegen.cs
+.ignore/
 
 # Since there are multiple workflows, uncomment next line to ignore bower_components
 # (https://github.com/github/gitignore/pull/1529#issuecomment-104372622)
