--- a/src/Settings.Json.Net.Test/Settings.Json.Net.Test.csproj
+++ b/src/Settings.Json.Net.Test/Settings.Json.Net.Test.csproj
@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>netcoreapp3.0</TargetFramework>
+		<TargetFrameworks>net5.0;net4.8</TargetFrameworks>
+		<LangVersion>latest</LangVersion>
+		<Nullable>enable</Nullable>
 		<IsPackable>false</IsPackable>
-		<AssemblyName>Phoenix.Functionality.Settings.Json.Test</AssemblyName>
-		<RootNamespace>Phoenix.Functionality.Settings.Json.Test</RootNamespace>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -14,9 +14,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
-		<PackageReference Include="MSTest.TestAdapter" Version="2.1.0" />
-		<PackageReference Include="MSTest.TestFramework" Version="2.1.0" />
+		<PackageReference Include="AutoFixture.AutoMoq" Version="4.17.0" />
+		<PackageReference Include="NUnit" Version="3.13.2" />
+		<PackageReference Include="NUnit3TestAdapter" Version="4.0.0" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
 	</ItemGroup>
 
 	<ItemGroup>
