--- a/src/Settings.Encryption/Settings.Encryption.csproj
+++ b/src/Settings.Encryption/Settings.Encryption.csproj
@@ -6,7 +6,7 @@
 		<Nullable>enable</Nullable>
 		<RootNamespace>Phoenix.Functionality.Settings.Encryption</RootNamespace>
 		<AssemblyName>Phoenix.Functionality.Settings.Encryption</AssemblyName>
-		<Version>2.0.0</Version>
+		<Version>2.1.0</Version>
 		<Authors>Felix Leistner</Authors>
 		<Company>Little Phoenix</Company>
 		<Copyright>2021</Copyright>
@@ -33,6 +33,7 @@
 		<None Include="..\..\LICENSE.md" Pack="true" PackagePath="" Link="⬙\LICENSE.md" />
 		<None Include="..\..\COPYING" Pack="true" PackagePath="" Link="⬙\COPYING" />
 		<None Include="..\..\COPYING.LESSER" Pack="true" PackagePath="" Link="⬙\COPYING.LESSER" />
+		<None Include="..\..\TODO.md" Link="⬙\TODO.md" />
 	</ItemGroup>
 
 	<!-- Move the created NuGet packages into another folder. -->
