--- a/src/Settings/Settings.csproj
+++ b/src/Settings/Settings.csproj
@@ -6,10 +6,10 @@
 		<Nullable>enable</Nullable>
 		<RootNamespace>Phoenix.Functionality.Settings</RootNamespace>
 		<AssemblyName>Phoenix.Functionality.Settings</AssemblyName>
-		<Version>2.0.0</Version>
+		<Version>2.1.0-beta1</Version>
 		<Authors>Felix Leistner</Authors>
 		<Company>Little Phoenix</Company>
-		<Copyright>2021</Copyright>
+		<Copyright>2022</Copyright>
 		<Description>Common settings infastructure for assemblies.</Description>
 		<PackageId>Phoenix.Functionality.Settings</PackageId>
 		<Product>Phoenix.Functionality.Settings</Product>
@@ -29,6 +29,7 @@
 		<None Include="..\..\LICENSE.md" Pack="true" PackagePath="" Link="⬙\LICENSE.md" />
 		<None Include="..\..\COPYING" Pack="true" PackagePath="" Link="⬙\COPYING" />
 		<None Include="..\..\COPYING.LESSER" Pack="true" PackagePath="" Link="⬙\COPYING.LESSER" />
+		<None Include="..\..\TODO.md" Link="⬙\TODO.md" />
 	</ItemGroup>
 
 	<!-- Move the created NuGet packages into another folder. -->
