--- a/src/Settings.Encryption/Settings.Encryption.csproj
+++ b/src/Settings.Encryption/Settings.Encryption.csproj
@@ -1,15 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net5.0;netstandard2.0</TargetFrameworks>
+		<TargetFrameworks>net6.0;net5.0;netstandard2.0</TargetFrameworks>
 		<LangVersion>latest</LangVersion>
 		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
 		<RootNamespace>Phoenix.Functionality.Settings.Encryption</RootNamespace>
 		<AssemblyName>Phoenix.Functionality.Settings.Encryption</AssemblyName>
-		<Version>2.2.0</Version>
+		<Version>2.3.0</Version>
 		<Authors>Felix Leistner</Authors>
 		<Company>Little Phoenix</Company>
-		<Copyright>2021</Copyright>
+		<Copyright>2022</Copyright>
 		<Description>Adds property encryption to the Phoenix.Functionality.Settings package.</Description>
 		<PackageId>Phoenix.Functionality.Settings.Encryption</PackageId>
 		<Product>Phoenix.Functionality.Settings.Encryption</Product>
