--- a/src/Settings.Json.Net/Settings.Json.Net.csproj
+++ b/src/Settings.Json.Net/Settings.Json.Net.csproj
@@ -1,15 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net5.0;netstandard2.0</TargetFrameworks>
+		<TargetFrameworks>net6.0;net5.0;netstandard2.0</TargetFrameworks>
 		<LangVersion>latest</LangVersion>
 		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
 		<AssemblyName>Phoenix.Functionality.Settings.Json.Net</AssemblyName>
 		<RootNamespace>Phoenix.Functionality.Settings.Json.Net</RootNamespace>
-		<Version>2.2.0</Version>
+		<Version>2.3.0</Version>
 		<Authors>Felix Leistner</Authors>
 		<Company>Little Phoenix</Company>
-		<Copyright>2021</Copyright>
+		<Copyright>2022</Copyright>
 		<Description>JSON based implementation for the common settings infastructure using JsonSerializer.</Description>
 		<PackageId>Phoenix.Functionality.Settings.Json.Net</PackageId>
 		<Product>Phoenix.Functionality.Settings.Json</Product>
