Separate storage from serialization.

--- a/src/Settings.Sinks.File.Test/Settings.Sinks.File.Test.csproj
+++ b/src/Settings.Sinks.File.Test/Settings.Sinks.File.Test.csproj
@@ -17,7 +17,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\Settings.Encryption\Settings.Encryption.csproj" />
+	  <ProjectReference Include="..\Settings.Sinks.File\Settings.Sinks.File.csproj" />
 	</ItemGroup>
 
 </Project>
