--- a/src/Settings.Builder.Test/Settings.Builder.Test.csproj
+++ b/src/Settings.Builder.Test/Settings.Builder.Test.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net6.0;net5.0;net4.8</TargetFrameworks>
+		<TargetFramework>net6.0</TargetFramework>
 		<LangVersion>latest</LangVersion>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
@@ -17,7 +17,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\Settings.Encryption\Settings.Encryption.csproj" />
+		<ProjectReference Include="..\Settings.Encryption\Settings.Encryption.csproj" />
+		<ProjectReference Include="..\Settings.Serializers.Json.Net\Settings.Serializers.Json.Net.csproj" />
+		<ProjectReference Include="..\Settings.Sinks.File\Settings.Sinks.File.csproj" />
 	</ItemGroup>
 
 </Project>
