--- a/src/Settings.Serializers.Json.Net.Test/Settings.Serializers.Json.Net.Test.csproj
+++ b/src/Settings.Serializers.Json.Net.Test/Settings.Serializers.Json.Net.Test.csproj
@@ -16,8 +16,12 @@
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
 	</ItemGroup>
 
+	<ItemGroup Condition="$(TargetFramework.StartsWith('net4'))">
+		<PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+	</ItemGroup>
+
 	<ItemGroup>
-	  <ProjectReference Include="..\Settings.Encryption\Settings.Encryption.csproj" />
+		<ProjectReference Include="..\Settings.Serializers.Json.Net\Settings.Serializers.Json.Net.csproj" />
 	</ItemGroup>
 
 </Project>
