--- a/src/Settings.Serializers.Json.Net/Settings.Serializers.Json.Net.csproj
+++ b/src/Settings.Serializers.Json.Net/Settings.Serializers.Json.Net.csproj
@@ -1,19 +1,19 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFrameworks>net6.0;net5.0;netstandard2.0</TargetFrameworks>
 		<LangVersion>latest</LangVersion>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
-		<AssemblyName>Phoenix.Functionality.Settings</AssemblyName>
-		<RootNamespace>Phoenix.Functionality.Settings</RootNamespace>
+		<AssemblyName>Phoenix.Functionality.Settings.Serializers.Json.Net</AssemblyName>
+		<RootNamespace>Phoenix.Functionality.Settings.Serializers.Json.Net</RootNamespace>
 		<Version>3.0.0-beta1</Version>
 		<Authors>Felix Leistner</Authors>
 		<Company>Little Phoenix</Company>
 		<Copyright>2022</Copyright>
-		<Description>Common settings infastructure for assemblies.</Description>
-		<PackageId>Phoenix.Functionality.Settings</PackageId>
-		<Product>Phoenix.Functionality.Settings</Product>
+		<Description>JSON based implementation for the common settings infastructure using JsonSerializer.</Description>
+		<PackageId>Phoenix.Functionality.Settings.Serializers.Json.Net</PackageId>
+		<Product>Phoenix.Functionality.Settings.Serializers.Json.Net</Product>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<IncludeSymbols>true</IncludeSymbols>
@@ -30,7 +30,14 @@
 		<None Include="..\..\LICENSE.md" Pack="true" PackagePath="" Link="⬙\LICENSE.md" />
 		<None Include="..\..\COPYING" Pack="true" PackagePath="" Link="⬙\COPYING" />
 		<None Include="..\..\COPYING.LESSER" Pack="true" PackagePath="" Link="⬙\COPYING.LESSER" />
-		<None Include="..\..\TODO.md" Link="⬙\TODO.md" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\Settings\Settings.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="System.Text.Json" Version="6.0.0" />
 	</ItemGroup>
 
 	<!-- Move the created NuGet packages into another folder. -->
