--- a/src/Settings.Sinks.File/Settings.Sinks.File.csproj
+++ b/src/Settings.Sinks.File/Settings.Sinks.File.csproj
@@ -1,19 +1,19 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFrameworks>net6.0;net5.0;netstandard2.0</TargetFrameworks>
 		<LangVersion>latest</LangVersion>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
-		<AssemblyName>Phoenix.Functionality.Settings</AssemblyName>
-		<RootNamespace>Phoenix.Functionality.Settings</RootNamespace>
+		<AssemblyName>Phoenix.Functionality.Settings.Sinks.File</AssemblyName>
+		<RootNamespace>Phoenix.Functionality.Settings.Sinks.File</RootNamespace>
 		<Version>3.0.0-beta1</Version>
 		<Authors>Felix Leistner</Authors>
 		<Company>Little Phoenix</Company>
 		<Copyright>2022</Copyright>
 		<Description>Common settings infastructure for assemblies.</Description>
-		<PackageId>Phoenix.Functionality.Settings</PackageId>
-		<Product>Phoenix.Functionality.Settings</Product>
+		<PackageId>Phoenix.Functionality.Settings.Sinks.File</PackageId>
+		<Product>Phoenix.Functionality.Settings.Sinks.File</Product>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<IncludeSymbols>true</IncludeSymbols>
@@ -31,6 +31,10 @@
 		<None Include="..\..\COPYING" Pack="true" PackagePath="" Link="⬙\COPYING" />
 		<None Include="..\..\COPYING.LESSER" Pack="true" PackagePath="" Link="⬙\COPYING.LESSER" />
 		<None Include="..\..\TODO.md" Link="⬙\TODO.md" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\Settings\Settings.csproj" />
 	</ItemGroup>
 
 	<!-- Move the created NuGet packages into another folder. -->
