--- a/src/.editorconfig
+++ b/src/.editorconfig
@@ -85,7 +85,7 @@ csharp_style_expression_bodied_constructors = false
 csharp_style_expression_bodied_indexers = true:suggestion
 csharp_style_expression_bodied_lambdas = true
 csharp_style_expression_bodied_local_functions = true
-csharp_style_expression_bodied_methods = true:suggestion
+csharp_style_expression_bodied_methods = when_on_single_line:suggestion
 csharp_style_expression_bodied_operators = true
 csharp_style_expression_bodied_properties = true:suggestion
 
