--- a/src/Settings.Serializers.Json.Net/Settings.Serializers.Json.Net.csproj
+++ b/src/Settings.Serializers.Json.Net/Settings.Serializers.Json.Net.csproj
@@ -7,7 +7,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<AssemblyName>Phoenix.Functionality.Settings.Serializers.Json.Net</AssemblyName>
 		<RootNamespace>Phoenix.Functionality.Settings.Serializers.Json.Net</RootNamespace>
-		<Version>3.0.0-beta1</Version>
+		<Version>3.0.0</Version>
 		<Authors>Felix Leistner</Authors>
 		<Company>Little Phoenix</Company>
 		<Copyright>2022</Copyright>
