--- a/src/Settings/Settings.csproj
+++ b/src/Settings/Settings.csproj
@@ -7,10 +7,10 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<AssemblyName>Phoenix.Functionality.Settings</AssemblyName>
 		<RootNamespace>Phoenix.Functionality.Settings</RootNamespace>
-		<Version>3.1.0</Version>
+		<Version>3.2.0-beta.1</Version>
 		<Authors>Felix Leistner</Authors>
 		<Company>Little Phoenix</Company>
-		<Copyright>2022</Copyright>
+		<Copyright>2023</Copyright>
 		<Description>Common settings infastructure for assemblies.</Description>
 		<PackageId>Phoenix.Functionality.Settings</PackageId>
 		<Product>Phoenix.Functionality.Settings</Product>
