--- a/src/Settings.Serializers.Json.Net.Test/Settings.Serializers.Json.Net.Test.csproj
+++ b/src/Settings.Serializers.Json.Net.Test/Settings.Serializers.Json.Net.Test.csproj
@@ -9,11 +9,11 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="AutoFixture.AutoMoq" Version="4.17.0" />
-		<PackageReference Include="Moq" Version="4.17.2" />
+		<PackageReference Include="AutoFixture.AutoMoq" Version="4.18.0" />
+		<PackageReference Include="Moq" Version="4.18.4" />
 		<PackageReference Include="NUnit" Version="3.13.3" />
-		<PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
+		<PackageReference Include="NUnit3TestAdapter" Version="4.5.0-alpha.4" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0-preview-20230223-05" />
 	</ItemGroup>
 
 	<ItemGroup Condition="$(TargetFramework.StartsWith('net4'))">
