--- a/src/Settings/Settings.csproj
+++ b/src/Settings/Settings.csproj
@@ -7,7 +7,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<AssemblyName>Phoenix.Functionality.Settings</AssemblyName>
 		<RootNamespace>Phoenix.Functionality.Settings</RootNamespace>
-		<Version>3.2.0-beta.1</Version>
+		<Version>3.2.0</Version>
 		<Authors>Felix Leistner</Authors>
 		<Company>Little Phoenix</Company>
 		<Copyright>2023</Copyright>
